{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Player",
            "id": "e5fd69f6-ef05-452a-8395-b589172bbf10",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "4205859d-3758-4c64-9f49-43844f547f4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "031e39f8-7f6f-42e0-8210-65d8545d3b91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d818a926-9ae7-4c52-ad6b-cb5f69cc3a87",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa1135a8-70ce-4d10-b0b9-c5a40ce0807d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "CameraLook",
            "id": "57c8be06-7b96-4815-920c-4e89bc520dc3",
            "actions": [
                {
                    "name": "MouseX",
                    "type": "Value",
                    "id": "7e7cfb63-c833-4357-b72e-c3b529ab7d76",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseY",
                    "type": "Value",
                    "id": "36399622-aff9-4984-a5a5-a524f5f2668b",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "0121154b-258c-4789-bbfe-aa45f22cb1a0",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1de68844-9d10-4c98-a2e1-3899fb151c2d",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}